set up basic styling for cell previews + hover state + fix overflow on cells

--- a/src/Umbraco.Web.UI.Client/src/less/gridview.less
+++ b/src/Umbraco.Web.UI.Client/src/less/gridview.less
@@ -81,16 +81,20 @@
      width: 100%;
      display: inline-block;
      vertical-align:top;
-     border-right:1px dashed rgba(182, 182, 182, 0.0);
+     //border-right:1px dashed rgba(182, 182, 182, 0.0);
      box-sizing: border-box;
  }
 
+/*
  .umb-grid .tb:hover .td{
      border-right:1px dashed rgba(182, 182, 182, 0.3);
  }
+
  .umb-grid  .td.last {
      border-right:1px dashed rgba(182, 182, 182, 0.0) !important;
  }
+ */
+
  .umb-grid  .tr {
  }
 
@@ -142,10 +146,17 @@
 // -------------------------
 .umb-grid .umb-cell{
      position: relative;
-     border: 1px dashed rgba(0,0,0,0);
+     border: 2px solid transparent;
+     //border: 1px dashed rgba(0,0,0,0);
      min-height:127px;
-
      background-color: @grayLighter;
+     box-sizing: border-box;
+     transition: border 100ms linear;
+}
+
+.umb-grid .umb-cell:hover {
+   border: 2px solid @blue;
+   cursor: pointer;
 }
 
 .umb-grid  .cell-tools {
@@ -169,6 +180,19 @@
 
 .umb-grid .cell-tools:hover{
     opacity: 1;
+}
+
+.umb-grid .cell-tools-add {
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   color: @blue;
+}
+
+.umb-grid .cell-tools-add:hover,
+.umb-grid .cell-tools-add:focus {
+   text-decoration: none;
 }
 
 /*
@@ -252,6 +276,7 @@
     /*border-bottom:1px solid rgba(182, 182, 182, 0.0) !important;*/
 }
 
+/*
 .umb-grid .warnhighlight, .umb-grid  .td.last.warnhighlight{
      border: 1px dashed @red !important;
 }
@@ -259,6 +284,7 @@
 .umb-grid .infohighlight, .umb-grid  .td.last.infohighlight{
      border: 1px dashed @blue !important;
 }
+*/
 
 .umb-grid ins.item-label {
    text-transform: uppercase;
@@ -561,10 +587,12 @@
  /* Margin control */
  /**************************************************************************************************/
 
+/*
  .umb-grid .umb-cell{
     padding-top: 5px;
     padding-bottom: 15px;
  }
+ */
 
  .umb-grid .umb-control{
      margin: 10px 0 0 0;
